test/positive/feature_while.java

public class feature_while {
  public feature_while() {}
  public int m(int x) {
    while (x>0) x=x-1;
    return x;
  }
}


