test/negative/feature_continue.java

public class feature_continue {
  public feature_continue() {}
  public int m(int x) {
    while (x>0) {
       x=x-1;
       if (x=87) {
         x=42;
         continue;
       }
    }
    return x;
  }
}


